# ChangeLog for x11-themes/human-icon-theme
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/human-icon-theme/ChangeLog,v 1.1 2010/04/02 16:18:59 ssuominen Exp $

*human-icon-theme-0.36 (02 Apr 2010)

  02 Apr 2010; Samuli Suominen <ssuominen@gentoo.org>
  +human-icon-theme-0.36.ebuild:
  Initial commit.
