@@ -1,5 +1,19 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST gentoo-logo.svg 13764 RMD160 62b740f670377486eb1350c4f180d9f0ab63948c SHA1 a81d7fb4be541547be78d648bbeb0d3c51f1a41e SHA256 ad81a212991cd24faaddbc260c806c805fd7a67f65b24655908a8971fa10794e
 DIST human-icon-theme_0.36.tar.gz 980140 RMD160 6321dcf11cbd1142114cdf73ce8bd40633b85f24 SHA1 b6b75ed7cd64980c7510f90d3e421bea7f3c1963 SHA256 56d9c9da5fe161634f28bdc45171f3f615034819fbf45f1f7bf4bf9675c59777
-EBUILD human-icon-theme-0.36.ebuild 1372 RMD160 65f05ce216f92794b8d2e58fde7e324379eb312e SHA1 48969517ee69257b05a486d1ba6327aea8e779a9 SHA256 ba4e2fa988816dde7be419590913a01a053005d41a04ee9d7e1c3239b48cf9d6
-MISC ChangeLog 374 RMD160 88a83f81928c8b0d96a6f2ff647d75eecf47f568 SHA1 29adad51b6d939cf5fa4eae7b8457fefff613237 SHA256 652302a13e59784c3ecd84437afc267bef89ef35f14aa0d50f99e47e4394bb83
+EBUILD human-icon-theme-0.36.ebuild 1391 RMD160 9a9ffe66bc832f89c96216eed68ecd0d9a9be5d1 SHA1 d50e976be12140c3fd4c04143fc9d08978427711 SHA256 f6bdf4d63b173d5383d4a7b6e7d581fdff4e0bd2d5179af6645bd5c1916f7fa6
+MISC ChangeLog 558 RMD160 2956d2644eb5f83fcf03f43e14f36a115e290596 SHA1 8d8a5013c954eefb70fdd5bd8765357503dce7e8 SHA256 13f02fea37e5af9b2e5410a4a8c23831e3d9c85801b7a1d6d95eb33459d1db39
 MISC metadata.xml 167 RMD160 6f174fdd5033945a3da1b7bbea9796fe17ba2bf8 SHA1 26b8b030985c93a71d6d34f25249320a30b22f36 SHA256 63163ddb9082af2890999b3c825b2d21df911f59611694e0e077e75a12bf7241
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQEcBAEBAgAGBQJPp4wSAAoJEEdUh39IaPFNW1YIAJ6N9D7dNzRnoS49mib/LETV
+D362EE2qGK4i+EHLGkhlkL4gZp1xLKM5iEkXALgeVm3BrPmKA36EdMdxOMnyau5D
+kopyVP2MI6x2ZJLDctzJhYo9Ql2r73pG6U23+TVgjBL8PQpOeK7qAV06oQBOMrsY
+WChwWMLsRX/UR2hiVpTd/I7m6+PLZvH1Dmv547sKI428QV037Pf/1AFRkRNtf5aC
+JuBgezWApeP3brfVNNnH/y1sAlNBEkyC0JawcawXrGctAImgzc5oafOGh8cRz1ue
+V7D3atTZHMKcO0mgEvEGnK9umHiG6HNbxbWODJ61XBawXs8rIOtfQXxp/7eOJso=
+=aRHo
+-----END PGP SIGNATURE-----
