@@ -1,8 +1,8 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/human-icon-theme/human-icon-theme-0.36.ebuild,v 1.1 2010/04/02 16:18:59 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/human-icon-theme/human-icon-theme-0.36.ebuild,v 1.2 2012/05/07 08:49:52 ssuominen Exp $
 
-EAPI=3
+EAPI=4
 inherit gnome2-utils
 
 DESCRIPTION="A nice and well polished icon theme"
@@ -15,37 +15,33 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
+RESTRICT="binchecks strip"
+
 RDEPEND="|| ( x11-themes/tangerine-icon-theme x11-themes/gnome-icon-theme )"
-DEPEND="gnome-base/librsvg
+DEPEND=">=gnome-base/librsvg-2.34
 	>=x11-misc/icon-naming-utils-0.8.90
 	dev-util/intltool
 	sys-devel/gettext"
 
 S=${WORKDIR}/${PN}
 
-RESTRICT="binchecks strip"
+DOCS="AUTHORS"
 
 src_prepare() {
-	sed -i \
-		-e 's:lib/icon-naming-utils/icon:libexec/icon:' \
-		Makefile || die
+	sed -i -e 's:lib/icon-naming-utils/icon:libexec/icon:' Makefile || die
+	sed -i -e '/SVGCONVERT/s:rsvg:&-convert:' svg2png.sh.in || die #414971
 
 	cp "${DISTDIR}"/gentoo-logo.svg scalable/places/start-here.svg || die
 
 	local res
 	for res in 22 32 48; do
-		rsvg -w ${res} -h ${res} scalable/places/start-here.svg \
-			${res}x${res}/places/start-here.png || die
+		rsvg-convert -w ${res} -h ${res} scalable/places/start-here.svg \
+			> ${res}x${res}/places/start-here.png || die
 	done
 }
 
 src_compile() {
-	emake index.theme || die
-}
-
-src_install() {
-	emake DESTDIR="${D}" install || die
-	dodoc AUTHORS
+	emake index.theme
 }
 
 pkg_preinst() { gnome2_icon_savelist; }
