@@ -1,6 +1,11 @@
 # ChangeLog for x11-themes/human-icon-theme
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-themes/human-icon-theme/ChangeLog,v 1.1 2010/04/02 16:18:59 ssuominen Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-themes/human-icon-theme/ChangeLog,v 1.2 2012/05/07 08:49:52 ssuominen Exp $
+
+  07 May 2012; Samuli Suominen <ssuominen@gentoo.org>
+  human-icon-theme-0.36.ebuild:
+  Convert from rsvg to rsvg-convert for recent gnome-base/librsvg wrt #414971
+  by Anton Kochkov
 
 *human-icon-theme-0.36 (02 Apr 2010)
 
